--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ body::-webkit-scrollbar-thumb {
 
 .navbar-links li a {
   text-decoration: none;
-  color: black;
+  color: white;
   padding:0;
   display: block;
 }
